--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -414,6 +414,9 @@ on boot
     class_start core
     class_start main
 
+# adb force hack
+    setprop persist.sys.usb.config adb
+
 on nonencrypted
     class_start late_start
 
