--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -483,7 +483,7 @@ service console /system/bin/sh
     class core
     console
     disabled
-    user shell
+    user root
     group log
     seclabel u:r:shell:s0
 
