--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -515,17 +515,6 @@ service servicemanager /system/bin/servicemanager
     onrestart restart surfaceflinger
     onrestart restart drm
 
-service vold /system/bin/vold
-    class core
-    socket vold stream 0660 root mount
-    ioprio be 2
-
-service netd /system/bin/netd
-    class main
-    socket netd stream 0660 root system
-    socket dnsproxyd stream 0660 root inet
-    socket mdns stream 0660 root system
-
 service debuggerd /system/bin/debuggerd
     class main
 
@@ -542,14 +531,6 @@ service surfaceflinger /system/bin/surfaceflinger
     group graphics drmrpc
     onrestart restart zygote
 
-service zygote /system/bin/app_process -Xzygote /system/bin --zygote --start-system-server
-    class main
-    socket zygote stream 660 root system
-    onrestart write /sys/android_power/request_state wake
-    onrestart write /sys/power/state on
-    onrestart restart media
-    onrestart restart netd
-
 service drm /system/bin/drmserver
     class main
     user drm
@@ -560,13 +541,6 @@ service media /system/bin/mediaserver
     user media
     group audio camera inet net_bt net_bt_admin net_bw_acct drmrpc qcom_diag mediadrm nvram ccci radio
     ioprio rt 4
-
-service bootanim /system/bin/bootanimation
-    class main
-    user graphics
-    group graphics
-    disabled
-    oneshot
 
 service installd /system/bin/installd
     class main
@@ -597,11 +571,6 @@ service mtpd /system/bin/mtpd
     disabled
     oneshot
 
-service keystore /system/bin/keystore /data/misc/keystore
-    class main
-    user keystore
-    group keystore drmrpc system
-
 service dumpstate /system/bin/dumpstate -s
     class main
     socket dumpstate stream 0660 shell log
@@ -617,6 +586,16 @@ service mdnsd /system/bin/mdnsd
     user mdnsr
     group inet net_raw
     socket mdnsd stream 0660 mdnsr inet
+    disabled
+    oneshot
+
+service sensorservice /system/bin/sensorservice
+    class late_start
+    user system
+    group graphics audio camera inet net_bt net_bt_admin net_bw_acct drmrpc input
+
+service ubuntuappmanager /system/bin/ubuntuappmanager
+    class main
     disabled
     oneshot
 
